[chore] file button placement
[chore] file button placement

--- a/app.css
+++ b/app.css
@@ -38,7 +38,7 @@ ListItem {
 .download-button {
     margin-top: 1;
     min-width: 5;
-    margin-left: 1;
+    margin-right: 1;
 }
 
 .file-buttons {
