--- a/app.css
+++ b/app.css
@@ -1,4 +1,20 @@
 
+#channel-select {
+    width: 100%;
+    height: 1fr;
+}
+
+#messages {
+    width: 100%;
+    height: 5fr;
+}
+
+#composer {
+    width: 100%;
+    height: 1.5fr;
+    border: solid $primary;
+}
+
 .user-ts {
     width: 1.5fr;
     /*border: solid white;*/
