--- a/app.css
+++ b/app.css
@@ -1,4 +1,33 @@
 
+ReactionScreen {
+    align: center middle;
+}
+
+#reaction-panel {
+    border: solid white;
+    width: 50%;
+    height: 70%;
+    layout: grid;
+    grid-size: 3 3;
+}
+
+#reaction-panel .reaction-container {
+    /*border: solid purple;*/
+    align: center middle;
+}
+
+.reaction-container EmojiButton {
+    width: 100%;
+    margin-left: 1;
+    margin-right: 1;
+}
+
+.reaction-label {
+    /*border: solid green;*/
+    width: 100%;
+    text-align: center;
+}
+
 #channel-select {
     width: 100%;
     height: 1fr;
