--- a/app.css
+++ b/app.css
@@ -8,7 +8,7 @@ ReactionScreen {
     width: 50%;
     height: 70%;
     layout: grid;
-    grid-size: 3 3;
+    grid-size: 3 4;
 }
 
 #reaction-panel .reaction-container {
@@ -25,7 +25,14 @@ ReactionScreen {
 .reaction-label {
     /*border: solid green;*/
     width: 100%;
+    height: 2;
     text-align: center;
+    margin-left: 1;
+    margin-right: 1;
+}
+
+#reaction-search {
+    column-span: 3;
 }
 
 #channel-select {
