--- a/app.css
+++ b/app.css
@@ -1,4 +1,25 @@
 
+ReactionChoiceScreen {
+    align: center middle;
+}
+
+#reaction-choice-panel {
+    width: 50%;
+    height: auto;
+}
+
+#reaction-choice-button-bar {
+    width: 100%;
+    height: auto;
+    align: center middle;
+}
+
+#reaction-choice-button-bar Button {
+    margin-top: 1;
+    margin-left: 1;
+    margin-right: 1;
+}
+
 ReactionScreen {
     align: center middle;
 }
